--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "create-index": "node create-index.js",
-    "test-index": "node test-index.js"
+    "build": "tsc",
+    "start": "node dist/create-index.js",
+    "dev": "ts-node --esm src/create-index.ts",
+    "create-index": "ts-node --esm src/create-index.ts",
+    "test-index": "ts-node --esm src/test-index.ts",
+    "clean": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +19,10 @@
   "dependencies": {
     "@azure/search-documents": "^12.1.0",
     "dotenv": "^17.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
