--- a/package.json
+++ b/package.json
@@ -2,27 +2,22 @@
   "name": "azureaiproject",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/create-index.js",
-    "dev": "ts-node --esm src/create-index.ts",
-    "create-index": "ts-node --esm src/create-index.ts",
-    "test-index": "ts-node --esm src/test-index.ts",
+    "dev": "node --loader ts-node/esm src/create-index.ts",
+    "create-index": "node --loader ts-node/esm src/create-index.ts",
+    "test-index": "node --loader ts-node/esm src/test-index.ts",
     "clean": "rm -rf dist"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@azure/search-documents": "^12.1.0",
     "dotenv": "^17.2.2"
   },
   "devDependencies": {
-    "@types/node": "^24.3.1",
+    "@types/node": "^20.11.30",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.3.3"
   }
 }
