--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/create-index.js",
-    "dev": "node --loader ts-node/esm src/create-index.ts",
     "create-index": "node --loader ts-node/esm src/create-index.ts",
     "test-index": "node --loader ts-node/esm src/test-index.ts",
+    "test-embedding": "node --loader ts-node/esm src/embed.ts",
+    "upload-vector-doc": "node --loader ts-node/esm src/upload-vector-doc.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@azure/openai": "^2.0.0",
     "@azure/search-documents": "^12.1.0",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "openai": "^5.20.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
