--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test-index": "node --loader ts-node/esm src/test-index.ts",
     "test-embedding": "node --loader ts-node/esm src/embed.ts",
     "upload-vector-doc": "node --loader ts-node/esm src/upload-vector-doc.ts",
+    "get-index": "node --loader ts-node/esm src/get-index.ts",
+    "vector-search": "node --loader ts-node/esm src/vector-search.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
