--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "upload-vector-doc": "node --loader ts-node/esm src/test/upload-vector-doc.ts",
     "get-index": "node --loader ts-node/esm src/test/get-index.ts",
     "vector-search": "node --loader ts-node/esm src/test/vector-search.ts",
+    "injestion": "node --loader ts-node/esm src/injestion/injestion.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
     "@azure/openai": "^2.0.0",
     "@azure/search-documents": "^12.1.0",
     "dotenv": "^17.2.2",
+    "js-tiktoken": "^1.0.21",
     "openai": "^5.20.1"
   },
   "devDependencies": {
