--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "get-index": "node --loader ts-node/esm src/test/get-index.ts",
     "vector-search": "node --loader ts-node/esm src/test/vector-search.ts",
     "ingest": "node --loader ts-node/esm src/injestion/injestion.ts",
+    "ingest-langchain": "node --loader ts-node/esm src/injestion/langchain-ingestion.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
     "@azure/openai": "^2.0.0",
     "@azure/search-documents": "^12.1.0",
     "@langchain/community": "^0.3.55",
+    "@langchain/core": "^0.3.75",
     "@langchain/openai": "^0.6.11",
     "dotenv": "^16.4.5",
     "js-tiktoken": "^1.0.21",
