--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "node dist/create-index.js",
     "create-index": "node --loader ts-node/esm src/createorUpdateIndex/create-index.ts",
+    "create-index-rest": "node --loader ts-node/esm src/createorUpdateIndex/create-index-rest.ts",
     "test-index": "node --loader ts-node/esm src/test/test-index.ts",
     "test-embedding": "node --loader ts-node/esm src/test/embed.ts",
     "upload-vector-doc": "node --loader ts-node/esm src/test/upload-vector-doc.ts",
@@ -27,6 +28,7 @@
     "dotenv": "^16.4.5",
     "js-tiktoken": "^1.0.21",
     "langchain": "^0.3.33",
+    "node-fetch": "^3.3.2",
     "openai": "^5.20.1"
   },
   "devDependencies": {
