--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -8,6 +8,7 @@
         "watch": "tsc -w",
         "prestart": "npm run build",
         "start": "func start",
+        "deploy": "func azure functionapp publish rag-function-app-new",
         "test": "mocha test/**/*.test.js",
         "test:watch": "mocha test/**/*.test.js --watch"
     },
