--- a/api/package.json
+++ b/api/package.json
@@ -25,12 +25,13 @@
     "dependencies": {
         "@azure/search-documents": "^12.2.0-beta.1",
         "@langchain/core": "^0.3.0",
+        "@langchain/langgraph": "^0.2.0",
         "@langchain/openai": "^0.3.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "langchain": "^0.3.0",
-        "langgraph": "^0.2.0",
         "openai": "^4.0.0",
+        "p-retry": "^6.2.0",
         "pino": "^8.16.2",
         "pino-pretty": "^10.2.3",
         "uuid": "^9.0.1",
